--- a/.github/workflows/caijiip.yml
+++ b/.github/workflows/caijiip.yml
@@ -26,7 +26,7 @@ jobs:
         pip install beautifulsoup4
         
     - name: Run script
-      run: python ${{ github.workspace }}/collect_ips.py
+      run: python collect_ips.py
         
     - name: Commit and push changes
       run: |
