--- a/.github/workflows/caijiip.yml
+++ b/.github/workflows/caijiip.yml
@@ -30,7 +30,7 @@ jobs:
         
     - name: Commit and push changes
       run: |
-        # git config --global user.email "bactdt01@gmail.com"
+        git config --global user.email bactdt01@gmail.com
         git config --global user.name "bactdt"
         if [ -n "$(git status --porcelain)" ]; then
           git add ip.txt
